[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/AirCutterAttack.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 94.2603

[node name="AirCutterAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 56, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
